# spock-starter

./: .gitignore  db.cfg  migrate  spock-starter.cabal  spock-template.cabal  stack.yaml
app/: Main.hs
migrations/: 001_schema.up.sql
public/: index.html
src/: App.hs
