name:                spock-starter
version:             0.1.0.0
synopsis:            A sample project using Spock backed by Postgresql.
description:         Please see README.md
homepage:            http://github.com/githubuser/spock-template#readme
license:             BSD3
license-file:        LICENSE
author:              Curtis Gagliardi
maintainer:          curtis@curtis.io
copyright:           2015 Curtis Gagliardk
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
  build-depends:       base >= 4.7 && < 5
                    ,  base-prelude
                    ,  aeson
                    ,  configurator
                    ,  http-types
                    ,  hvect
                    ,  lucid
                    ,  mtl
                    ,  postgresql-simple
                    ,  Spock >= 0.9
                    ,  text
                    ,  time
                    ,  transformers
                    ,  users
                    ,  users-postgresql-simple
                    ,  wai-middleware-static
  default-language:    Haskell2010

executable spock-starter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , base-prelude
                     , spock-starter
  default-language:    Haskell2010

test-suite spock-starter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , spock-starter
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/spock-template
